--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@apollo/experimental-nextjs-app-support": "^0.5.2",
+    "@heroicons/react": "^2.0.18",
     "graphql": "^16.8.1",
+    "isomorphic-dompurify": "^1.11.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
@@ -24,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
