--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "isomorphic-dompurify": "^1.11.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intl": "^6.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
