--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "graphql": "^16.8.1",
     "isomorphic-dompurify": "^1.11.0",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.5.5"
