--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-swipe": "^0.0.23",
     "react-intl": "^6.5.5"
   },
   "devDependencies": {
