--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@apollo/client": "^3.8.8",
     "@apollo/experimental-nextjs-app-support": "^0.5.2",
     "@heroicons/react": "^2.0.18",
+    "@plaiceholder/next": "^3.0.0",
+    "@plaiceholder/tailwindcss": "^3.0.0",
     "graphql": "^16.8.1",
     "isomorphic-dompurify": "^1.11.0",
     "next": "^14.0.4",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-easy-swipe": "^0.0.23",
-    "react-intl": "^6.5.5"
+    "react-intl": "^6.5.5",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20",
