--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@heroicons/react": "^2.0.18",
     "@plaiceholder/next": "^3.0.0",
     "@plaiceholder/tailwindcss": "^3.0.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "graphql": "^16.8.1",
     "isomorphic-dompurify": "^1.11.0",
+    "nanoid": "^5.0.4",
     "next": "^14.0.4",
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-easy-swipe": "^0.0.23",
     "react-intl": "^6.5.5",
+    "react-redux": "^9.1.0",
     "sharp": "^0.33.2"
   },
   "devDependencies": {
