--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.fontSize": 14,
     "prettier.jsxSingleQuote": true,
     "prettier.singleQuote": true,
-    "html.completion.attributeDefaultValue": "singlequotes"
+    "html.completion.attributeDefaultValue": "singlequotes",
+    "editor.wordWrapColumn": 80
 }
