--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@plaiceholder/next": "^3.0.0",
     "@plaiceholder/tailwindcss": "^3.0.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "antd": "^5.14.0",
     "isomorphic-dompurify": "^1.11.0",
     "nanoid": "^5.0.4",
     "next": "^14.0.4",
