--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "isomorphic-dompurify": "^1.11.0",
     "nanoid": "^5.0.4",
     "next": "^14.0.4",
+    "next-auth": "^5.0.0-beta.13",
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
